# python_playground

./: Dockerfile  compose.yml
.github/: dependabot.yml
.github/workflows/: static.yml  test.yml
src/app/: Makefile  mypy.ini  pyproject.toml
src/app/app/: main.py
src/app/tests/: test_hello.py
